--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Build | Build (musl)
         if: matrix.target == 'x86_64-unknown-linux-musl'
-        run: cargo build --release --features tls-vendored --target ${{ matrix.target }}
+        run: cargo build --release --target ${{ matrix.target }}
 
       - name: Post Setup | Prepare artifacts [Windows]
         if: matrix.os == 'windows-latest'
