--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test-gha"
-version = "0.1.3-alpha.0"
+version = "0.1.3"
 authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
 edition = "2018"
 
