--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,21 +68,19 @@ jobs:
       - name: Post Setup | Prepare artifacts [Windows]
         if: matrix.os == 'windows-latest'
         run: |
+          mkdir target/stage
           cd target/${{ matrix.target }}/release
           strip test-gha.exe
-          tag=$(git describe --tags)
-          mkdir ../../stage
-          7z a ../../stage/test-gha-${tag}-${{ matrix.name }} test-gha.exe
+          7z a ../../stage/test-gha-$(git describe --tags)-${{ matrix.name }} test-gha.exe
           cd -
 
       - name: Post Setup | Prepare artifacts [-nix]
         if: matrix.os != 'windows-latest'
         run: |
+          mkdir target/stage
           cd target/${{ matrix.target }}/release
           strip test-gha
-          tag=$(git describe --tags)
-          mkdir ../../stage
-          tar czvf ../../stage/test-gha-${tag}-${{ matrix.name }} test-gha
+          tar czvf ../../stage/test-gha-$(git describe --tags)-${{ matrix.name }} test-gha
           cd -
 
       - name: Post Setup | Upload artifacts
