--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "test-gha"
 version = "0.2.1-alpha.0"
 authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
 edition = "2018"
+description = "Test crate for testing out CI and automatic deploys"
+license = "MIT"
+homepage = "https://github.com/badboy/test-gha"
+repository = "https://github.com/badboy/test-gha"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
